--- a/WebShopFrontend/Components/Layout/MainLayout.razor
+++ b/WebShopFrontend/Components/Layout/MainLayout.razor
@@ -16,8 +16,6 @@
     </main>
 </div>
 
-<div id="blazor-error-ui" data-nosnippet>
-    An unhandled error has occurred.
-    <a href="." class="reload">Reload</a>
-    <span class="dismiss">🗙</span>
-</div>
+<footer>
+    <p>©Hoangs Shop</p>
+</footer>
