--- a/WebShopFrontend/Components/Layout/NavMenu.razor
+++ b/WebShopFrontend/Components/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
                 <NavLink class="nav-link" href="register">
                     <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Register
                 </NavLink>
+                <AuthorizeView>
+                <NavLink class="nav-link" href="cart">
+                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Cart
+                </NavLink>
+                </AuthorizeView>
             </nav>
         </div>
     </div>
