--- a/WebShopFrontend/wwwroot/app.css
+++ b/WebShopFrontend/wwwroot/app.css
@@ -1,7 +1,15 @@
-﻿body {
-    text-align: center;
+﻿* {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0; 
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    background-color: #f1f5f8; 
 }
 
 button:hover {
-    cursor:pointer;
+    cursor: pointer;
 }
