--- a/WebShopFrontend/Components/Layout/MainLayout.razor
+++ b/WebShopFrontend/Components/Layout/MainLayout.razor
@@ -1,4 +1,7 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager Navigation
+@using WebShopFrontend.Services
+@inject WebshopAuthenticationStateProvider _authStateProvider
 
 <div class="page">
 
@@ -19,3 +22,9 @@
 <footer>
     <p>©Hoangs Shop</p>
 </footer>
+
+
+
+
+
+
