--- a/WebShopFrontend/Components/Pages/Cart.razor
+++ b/WebShopFrontend/Components/Pages/Cart.razor
@@ -3,6 +3,7 @@
 @using WebShopFrontend.Interfaces
 @using WebShopFrontend.Services
 @using WebShopShared.Models
+@using Microsoft.AspNetCore.Components.Authorization
 @rendermode InteractiveServer
 @inject OrderStateService _orderStateService
 @inject IOrderService _orderService;
