--- a/WebShopFrontend/Components/GenericList.razor
+++ b/WebShopFrontend/Components/GenericList.razor
@@ -11,7 +11,7 @@
 {
     <p>Loading items...</p>
 }
-else if (ItemTemplate != null) // Ensure ItemTemplate is not null
+else if (ItemTemplate != null) 
 {
     @foreach (var item in Items)
     {
