--- a/WebShopFrontend/Components/Pages/Products.razor
+++ b/WebShopFrontend/Components/Pages/Products.razor
@@ -17,7 +17,7 @@
                     </p>
                     @if (context.OnSale)
                     {
-                        <p class="sale-label">SALE</p>  <!-- Add the sale label here -->
+                        <p class="sale-label">SALE</p>  
                     }
                     <AddToCart Product="context"></AddToCart>
                 </article>
