--- a/WebShopFrontend/Components/App.razor
+++ b/WebShopFrontend/Components/App.razor
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
+    <title>Hoang's Shop</title>
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <link rel="stylesheet" href="@Assets["WebShopFrontend.styles.css"]" />
     <ImportMap />
